fix: removing commented code

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                     </p>
 
                     <div class="home__buttons">
-                        <a href="#" class="button">
+                        <a download="" href="./assets/pdf/nevio-cv.pdf" class="button">
                             Download CV
                         </a>
 
-                        <a href="#" class="button button-outline">
+                        <a href="#about" class="button button-outline">
                             Learn more
                         </a>
                     </div>
@@ -104,7 +104,7 @@
                     Nullam ut purus viverra, pellentesque est nec, commodo quam. Nunc tristique at odio a bibendum. Nunc pulvinar lacus eu nibh maximus, ut consectetur nulla pellentesque. Phasellus maximus leo vitae arcu placerat, nec porta lectus auctor. In id lobortis dui, nec congue leo. Pellentesque suscipit tincidunt nisi sit amet malesuada. Nulla at venenatis quam. Pellentesque finibus hendrerit tristique.
                 </p>
 
-                <a href="#" class="button">
+                <a href="#contact" class="button">
                     Contact me
                 </a>
             </div>
@@ -413,213 +413,9 @@
                 </div>
             </div>
         </section>
-
-        <!-- <section class="projects section container" id="projects">
-            <div class="section__titles">
-                <h3 class="section__subtitle">More experience</h3>
-                <h2 class="section__title">Projects</h2>
-            </div>
-
-            <div class="projects__container">
-                <div class="project">
-                    <img
-                        src="./assets/images/python-project-thumb-1.png"
-                        alt="hand-recognition"
-                        class="project__image"
-                    />
-
-                    <div class="project__data">
-                        <div>
-                            <h2 class="project__title">Hand Detector</h2>
-
-                            <p class="project__description">
-                                The hand detector using Python is a project that I created to study Python programming with bests practices. It was finished in about 2 weeks and has 3 modes of detector: the counter, volume controller and object moving mode.
-                            </p>
-                        </div>
-
-                        <div class="project__links">
-                            <a href="https://github.com/NEVI0/hand-recognition" target="_blank" class="icon__button">
-                                <i class="ri-github-line icon__button-icon"></i>
-                            </a>
-
-                            <a href="https://www.linkedin.com/posts/n%C3%A9vio-magagnin-045710177_python-programming-software-activity-6864335079620018176-Xtld" target="_blank" class="icon__button">
-                                <i class="ri-linkedin-box-line icon__button-icon"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project project-reverse">
-                    <img
-                        src="./assets/images/python-project-thumb-2.png"
-                        alt="hand-recognition"
-                        class="project__image"
-                    />
-
-                    <div class="project__data">
-                        <div>
-                            <h2 class="project__title">Snake Game</h2>
-
-                            <p class="project__description">
-                                Another Python project to learn much more about Python programming, POO with Python and of course, to have fun while testing it!
-                            </p>
-                        </div>
-
-                        <div class="project__links">
-                            <a href="https://github.com/NEVI0/Snake-Game-Python" target="_blank" class="icon__button">
-                                <i class="ri-github-line icon__button-icon"></i>
-                            </a>
-
-                            <a href="https://www.linkedin.com/posts/n%C3%A9vio-magagnin-045710177_python-gamedeveloper-pythontraining-activity-6738945546129547264-zy0q" target="_blank" class="icon__button">
-                                <i class="ri-linkedin-box-line icon__button-icon"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project">
-                    <img
-                        src="./assets/images/rn-project-thumb-3.png"
-                        alt="hand-recognition"
-                        class="project__image"
-                    />
-
-                    <div class="project__data">
-                        <div>
-                            <h2 class="project__title">User Interface Prototype</h2>
-
-                            <p class="project__description">
-                                This UI was created by me using React Native to improve my front-end skills in styling interfaces. I used styled-components to style it and reusable components in the screens.
-                            </p>
-                        </div>
-
-                        <div class="project__links">
-                            <a href="https://github.com/NEVI0/react-native-ui-prototype" target="_blank" class="icon__button">
-                                <i class="ri-github-line icon__button-icon"></i>
-                            </a>
-
-                            <a href="https://www.linkedin.com/posts/n%C3%A9vio-magagnin-045710177_reactnative-react-ui-activity-6834526150740467712-KWZd" target="_blank" class="icon__button">
-                                <i class="ri-linkedin-box-line icon__button-icon"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project project-reverse">
-                    <img
-                        src="./assets/images/via-notes-project-thumb.png"
-                        alt="hand-recognition"
-                        class="project__image"
-                    />
-
-                    <div class="project__data">
-                        <div>
-                            <h2 class="project__title">Via Notes</h2>
-
-                            <p class="project__description">
-                                This project is a full-stack test that Vialaser company passed to me in order to get a front-end job in the company. I had one week to complete it, but I actually finished in four days only programming at night.
-                            </p>
-                        </div>
-
-                        <div class="project__links">
-                            <a href="https://github.com/NEVI0/via-notes-frontend" target="_blank" class="icon__button">
-                                <i class="ri-github-line icon__button-icon"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="contact section container" id="contact">
-            <div class="section__titles">
-                <h3 class="section__subtitle">Reach me</h3>
-                <h2 class="section__title">Contacts</h2>
-            </div>
-
-            <div class="contact__container grid">
-                <a href="https://www.linkedin.com/in/n%C3%A9vio-magagnin-045710177/" target="_blank" class="contact__card">
-                    <div class="card-overflow overflow-1"></div>
-
-                    <i class="ri-linkedin-box-line contact__card-icon"></i>
-                    <h3 class="contact__title">LinkedIn</h3>
-                    <span class="contact__data">Névio Costa Magagnin</span>
-
-                    <div class="card-overflow overflow-2"></div>
-                </a>
-
-                <a href="mailto:neviocostamagagnin@gmail.com" target="_blank" class="contact__card">
-                    <div class="card-overflow overflow-1"></div>
-
-                    <i class="ri-mail-send-line contact__card-icon"></i>
-                    <h3 class="contact__title">E-mail</h3>
-                    <span class="contact__data">neviocostamagagnin@gmail.com</span>
-
-                    <div class="card-overflow overflow-2"></div>
-                </a>
-
-                <a href="https://www.instagram.com/nevio_costa/" target="_blank" class="contact__card">
-                    <div class="card-overflow overflow-1"></div>
-
-                    <i class="ri-instagram-line contact__card-icon"></i>
-                    <h3 class="contact__title">Instagram</h3>
-                    <span class="contact__data">@nevio_costa</span>
-
-                    <div class="card-overflow overflow-2"></div>
-                </a>
-
-                <a href="https://api.whatsapp.com/send?phone=5548996388761" target="_blank" class="contact__card">
-                    <div class="card-overflow overflow-1"></div>
-
-                    <i class="ri-whatsapp-line contact__card-icon"></i>
-                    <h3 class="contact__title">Whatsapp</h3>
-                    <span class="contact__data">+55 48 99638-8761</span>
-
-                    <div class="card-overflow overflow-2"></div>
-                </a>
-            </div>
-        </section> -->
     </main>
-
-    <!-- <button class="icon__button scrollup" id="scroll-up">
-        <i class="ri-arrow-up-line icon__button-icon"></i>
-    </button>
-
-    <footer class="footer">
-        <h1 class="footer__title">
-            Névio C. Magagnin
-        </h1>
-
-        <div class="footer__links footer__row">
-            <a href="#about" class="footer__link">About</a>
-            <a href="#skills" class="footer__link">Skills</a>
-            <a href="#projects" class="footer__link">Projects</a>
-        </div>
-
-        <div class="footer__social footer__row">
-            <a href="mailto:neviocostamagagnin@gmail.com" target="_blank" class="social__link">
-                <i class="ri-mail-send-line social__icon"></i>
-            </a>
-
-            <a href="https://api.whatsapp.com/send?phone=5548996388761" target="_blank" class="social__link">
-                <i class="ri-whatsapp-line social__icon"></i>
-            </a>
-
-            <a href="https://www.linkedin.com/in/n%C3%A9vio-magagnin-045710177/" target="_blank" class="social__link">
-                <i class="ri-linkedin-box-line social__icon"></i>
-            </a>
-
-            <a href="https://www.instagram.com/nevio_costa/" target="_blank" class="social__link">
-                <i class="ri-instagram-line social__icon"></i>
-            </a>
-        </div>
-
-        <p class="footer__copy">
-            &copy; Névio Costa Magagnin. All rights reserved
-        </p>
-    </footer> -->
     
-    <footer class="footer">
+    <footer class="footer" id="contact">
         <h1 class="footer__title">
             Névio C. Magagnin
         </h1>
