feat: adding projects descriptions

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                         <a href="#about" class="nav__link">About</a>
                     </li>
 
-                    <li class="nav__item">
+                    <!-- <li class="nav__item">
                         <a href="#experiences" class="nav__link">Experiences</a>
-                    </li>
+                    </li> -->
 
                     <li class="nav__item">
                         <a href="#skills" class="nav__link">Skills</a>
@@ -101,7 +101,7 @@
 
             <div class="about__container">
                 <p class="about__description">
-                    Nullam ut purus viverra, pellentesque est nec, commodo quam. Nunc tristique at odio a bibendum. Nunc pulvinar lacus eu nibh maximus, ut consectetur nulla pellentesque. Phasellus maximus leo vitae arcu placerat, nec porta lectus auctor. In id lobortis dui, nec congue leo. Pellentesque suscipit tincidunt nisi sit amet malesuada. Nulla at venenatis quam. Pellentesque finibus hendrerit tristique.
+                    I am a hardworking person, that means when I do not know something that I need to do, I try my best to learn it and implement in the code. As a full-stack developer, I've already worked in so many types of projects such as e-commerces, apps, APIs, websites, UI/UX designs and go on. Nowadays, I am focusing in learning Python, Unit Tests in React/React Native and UI/UX designs.
                 </p>
 
                 <a href="#contact" class="button">
@@ -110,14 +110,14 @@
             </div>
         </section>
 
-        <section class="experiences section container" id="experiences">
+        <!-- <section class="experiences section container" id="experiences">
             <div class="section__header">
                 <h3 class="section__subtitle">My walk</h3>
                 <h2 class="section__title">Experiences</h2>
             </div>
 
             <div class="experiences__container">
-                <!-- <div class="experiences__list">
+                <div class="experiences__list">
                     <div class="experience__item">
                         <p class="experience__period">
                             since feb/2020 until dec/2020
@@ -165,9 +165,9 @@
                             Nullam ut purus viverra, pellentesque est nec, commodo quam. Nunc tristique at odio a bibendum. Nunc pulvinar lacus eu nibh maximus, ut consectetur nulla pellentesque.
                         </p>
                     </div>
-                </div> -->
+                </div>
             </div>
-        </section>
+        </section> -->
 
         <section class="skills section container" id="skills">
             <div class="section__header">
@@ -350,7 +350,7 @@
 
                     <div class="project__data">
                         <h3 class="project__name">Hand Detector</h3>
-                        <p class="project__description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                        <p class="project__description">Python project used to study more about programming logic and to improve my skill set. The hand detector has three modes: finger counter, volume controller and object moving.</p>
 
                         <div class="project__links">
                             <a href="https://github.com/NEVI0/hand-recognition" target="_blank" class="project__link">Repository</a>
@@ -368,7 +368,7 @@
 
                     <div class="project__data">
                         <h3 class="project__name">Snake Game</h3>
-                        <p class="project__description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                        <p class="project__description">A fun game that I created to improve my programming logic with Python.</p>
 
                         <div class="project__links">
                             <a href="https://github.com/NEVI0/Snake-Game-Python" target="_blank" class="project__link">Repository</a>
@@ -386,7 +386,7 @@
 
                     <div class="project__data">
                         <h3 class="project__name">React Native UI Prototype</h3>
-                        <p class="project__description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                        <p class="project__description">UI prototype using React Native as a form to study UI/UX and mobile development at the same time with only one project.</p>
 
                         <div class="project__links">
                             <a href="https://github.com/NEVI0/react-native-ui-prototype" target="_blank" class="project__link">Repository</a>
@@ -404,7 +404,7 @@
 
                     <div class="project__data">
                         <h3 class="project__name">Via Notes</h3>
-                        <p class="project__description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                        <p class="project__description">This is my challenge project used to get a job as Front-end developer at Vialaser Depilação S.A.</p>
 
                         <div class="project__links">
                             <a href="https://github.com/NEVI0/via-notes-frontend" target="_blank" class="project__link">Repository</a>
