--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@
             </div>
         </header>
 
-        <div class="divider">
-            <div class="divider__line"></div>
-            <span class="divider__title">links</span>
-            <div class="divider__line"></div>
-        </div>
+        <hr class="divider" />
 
         <main class="links">
             <a href="https://www.instagram.com/" target="_blank" class="link link-instagram">Instagram</a>
