feat: adding new changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 
-    <link rel="shortcut icon" href="./images/tree.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./styles.css">
 
     <title>Névio Costa Magagnin</title>
@@ -18,7 +18,7 @@
     <div class="offset offset1"></div>
     <div class="offset offset2"></div>
 
-    <div class="main">
+    <main class="main">
         <header class="header">
             <img
                 src="./images/me.png"
@@ -39,7 +39,7 @@
 
         <hr class="divider" />
 
-        <main class="links">
+        <nav class="links">
             <a href="https://www.instagram.com/nevio_costa/" target="_blank" class="link link-instagram">
                 Instagram
             </a>
@@ -56,14 +56,18 @@
                 GitHub
             </a>
             
-            <a href="https://meet-compass.herokuapp.com/home" target="_blank" class="link link-meetcompass">
-                Meet Compass
+            <a href="https://play.google.com/store/apps/details?id=com.nevioproject.flutter_supp_chat_app" target="_blank" class="link link-suppmessenger">
+                Supp Messenger
             </a>
 
-            <a href="./pdfs/resume.pdf" target="_blank" download="" class="link link-resume">
-                Resume
+            <a href="./pdfs/resume-en.pdf" target="_blank" download="" class="link link-resume-1">
+                English Resume
             </a>
-        </main>
+
+            <a href="./pdfs/resume-pt.pdf" target="_blank" download="" class="link link-resume-2">
+                Portuguese Resume
+            </a>
+        </nav>
 
         <hr class="divider" />
 
@@ -72,7 +76,7 @@
                 &copy; Copyright Névio Costa Magagnin | All rights reserved
             </small>
         </footer>
-    </div>
+    </main>
     
     <div class="offset offset3"></div>
     <div class="offset offset4"></div>
