refactor: changing site

--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
     <title>Névio Costa Magagnin</title>
 </head>
 <body>
-    <div class="offset offset1"></div>
-    <div class="offset offset2"></div>
-
     <main class="main">
         <header class="header">
             <img
@@ -32,7 +29,7 @@
                 </h1>
 
                 <h2 class="header__subtitle">
-                    Full-stack Developer & UX/UI Designer
+                    Software Engineer & UX/UI Designer
                 </h2>
             </div>
         </header>
@@ -55,18 +52,6 @@
             <a href="https://github.com/NEVI0" target="_blank" class="link link-github">
                 GitHub
             </a>
-            
-            <a href="https://play.google.com/store/apps/details?id=com.nevioproject.flutter_supp_chat_app" target="_blank" class="link link-suppmessenger">
-                Supp Messenger
-            </a>
-
-            <a href="./pdfs/resume-en.pdf" target="_blank" download="" class="link link-resume-1">
-                English Resume
-            </a>
-
-            <a href="./pdfs/resume-pt.pdf" target="_blank" download="" class="link link-resume-2">
-                Portuguese Resume
-            </a>
         </nav>
 
         <hr class="divider" />
@@ -77,8 +62,5 @@
             </small>
         </footer>
     </main>
-    
-    <div class="offset offset3"></div>
-    <div class="offset offset4"></div>
 </body>
 </html>
